# nifty

./: Cargo.toml  README.md
src/: dfa.rs  dfa_macro.rs  lib.rs  make_dfa.rs
